--- a/index.html
+++ b/index.html
@@ -9,11 +9,11 @@
   </head>
   <body>
     <section>
-      <a href="#frontend">Frontend</a>
-      <a href="#design">Design</a>
-      <a href="#and">&</a>
-      <a href="#development">Development</a>
-      <a href="#sprint-5">Sprint 5</a>
+      <a class="frontend" href="#frontend"></a>
+      <a class="design" href="#design"></a>
+      <a class="and" href="#and"></a>
+      <a class="longPress" href="#development" data-long-press-delay="500"></a>
+      <a class="deviceMotion" href="#sprint-5">Sprint 5</a>
       <a href="#fix">Fix</a>
       <a href="#the">The</a>
       <a href="#flow">Flow</a>
@@ -29,6 +29,7 @@
       <a href="#states">States</a>
       <a href="#navigation">Navigation</a>
       <a href="#code">Code</a>
+
     </section>
   </body>
 </html>
