--- a/index.html
+++ b/index.html
@@ -13,12 +13,12 @@
       <a class="design" href="#design"></a>
       <a class="and" href="#and"></a>
       <a class="longPress" href="#development" data-long-press-delay="500"></a>
-      <a class="deviceMotion" href="#sprint-5">Sprint 5</a>
-      <a href="#fix">Fix</a>
-      <a href="#the">The</a>
-      <a href="#flow">Flow</a>
-      <a href="#user">User</a>
-      <a href="#interface">Interface</a>
+      <a href="#sprint-5">Sprint 5</a>
+      <a class="mousemove" href="#fix">Fix</a>
+      <a class="focusFill" href="#the">The</a>
+      <a class="transition" href="#flow">Flow</a>
+      <a class="user" href="#user"></a>
+      <a class="interface" href="#interface"></a>
       <a href="#events">Events</a>
       <a href="#interaction">Interaction</a>
       <a href="#user-flow">User flow</a>
